change to custom code

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-custom/train/0928/config
-custom/train/0929_face/config
-custom/train/0929_posture/config
-custom/train/1022/config
+train/*
+data/*
